@@ -1,3 +1,10 @@
+2006-06-08  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el (kbd): C-c k is now irrelevant
+	(emms): new setup for emms 2
+
+	* config/lisp-config.el (yh/insert-elisp-key): function to ease key definition
+
 2006-06-04  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/visual.el (default-frame-alist): leave only common configuration
